// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  disabled: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="" disabled="" id="identifier_0" name="identifier" type="radio" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" disabled="" id="identifier_1" name="identifier" type="radio" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" disabled="" id="identifier_2" name="identifier" type="radio" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" disabled="" id="identifier_3" name="identifier" type="radio" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  helpText: 'Hello jocker'
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          Hello jocker
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  inputVerticalList: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio mg-input__input-group-container--vertical">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelHide: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title class="sr-only" identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelOnTop: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--label-on-top mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  readonly: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio mg-input--readonly">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  required: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" required="" type="radio" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" required="" type="radio" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" required="" type="radio" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" required="" type="radio" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info"></mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 2`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="u">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="i">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="o">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="a">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 3`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="4">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 4`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="true">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="false">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="false">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="false">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], inputValue: 'a' }) with inputValue (%s) 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="is-focused mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="u">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="i">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" type="radio" value="o">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" type="radio" value="a">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], inputValue: 'a' }) with inputValue (%s) 2`] = `
<mg-input-radio valid="" value="a">
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="a">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="i">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="o">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" checked="" id="identifier_3" name="identifier" type="radio" value="a">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], inputValue: 'batman' }) with inputValue (%s) 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="is-focused mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" type="radio" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" type="radio" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], inputValue: 'batman' }) with inputValue (%s) 2`] = `
<mg-input-radio valid="" value="batman">
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="" checked="" id="identifier_0" name="identifier" type="radio" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], inputValue: 1 }) with inputValue (%s) 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="is-focused mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" type="radio" value="4">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], inputValue: 1 }) with inputValue (%s) 2`] = `
<mg-input-radio valid="" value="1">
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="" checked="" id="identifier_0" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="4">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], inputValue: true }) with inputValue (%s) 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="is-focused mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="true">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="false">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], inputValue: true }) with inputValue (%s) 2`] = `
<mg-input-radio valid="" value="">
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--radio">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="true">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="false">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;
